--- a/src/main/resources/META-INF/resources/invite.html
+++ b/src/main/resources/META-INF/resources/invite.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 
-	<title>Document</title>
+	<title>傲空间</title>
 	<style>
 		.inv 
 		{
@@ -54,7 +54,7 @@
 	<div class="container">
 		<img src="./img/dow.png" class="inv" />
 	</div>
-	<div style="display: flex;margin-top:43px;font-size: 3.7vw;font-weight: 500;color: #85899C;"class="flex x-center y-center xy-center">您的亲友Pillar邀请您加入他/她的傲来空间</div>
+	<div style="display: flex;margin-top:43px;font-size: 3.7vw;font-weight: 500;color: #85899C;"class="flex x-center y-center xy-center">您的亲友<span style="color: #337AFF;">eulixos</span>邀请您加入他/她的傲来空间</div>
 	<div style="display: flex;margin-top:33px;font-size: 4.3vw;color: #333333;"class="flex x-center y-center xy-center">加入后可共享使用存储空间哦！</div>
 	<div style="display: flex;margin-top:134px;" class="flex x-center y-center xy-center">
 		<div style="display: flex;width: 33vw;height: 7vh;" class="button flex x-center y-center xy-center pointer" >
@@ -65,11 +65,24 @@
 	<div id="test"></div>
 	<script type="text/javascript">
 	var downloader, 
-	scheme = 'bravephoenix://eulixspace:4031/sharelink',  
+	scheme_android= 'bravephoenix://eulixspace:4031/sharelink',  
+	scheme_ios= 'https://ao.space',
 	download_android='https://code.eulix.xyz/bp/cicada/-/packages'; 
 	download_ios='https://res.space.eulix.xyz/clients/ios/index.html'; 
 	document.getElementById('inv').onclick = function () {
-        window.location.href = scheme;  
+			if(detect()=="android")
+			{
+				window.location.href = scheme_android+window.location.search;
+				//console.log(scheme_android+window.location.search);
+			}
+			if(detect()=="ios")
+			{
+				window.location.href = scheme_ios+window.location.search;
+				//console.log(scheme_ios+window.location.search);
+			}
+				
+		
+		
 		downloader = setTimeout(function(){
             if(detect()=="android")
 				window.location.href = download_android;
@@ -100,6 +113,9 @@
     }
     return equipmentType;
 }
+
+
+
 
 </script>
 
