--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -97,6 +97,9 @@
 			</div>
 			<p class="pd">最新版傲来空间App-首页-扫一扫</p>
 		</div>
+		<div style="display:none">
+		<script type="text/javascript" src="https://s9.cnzz.com/z_stat.php?id=1280555335&web_id=1280555335"></script>
+		</div>
 
 		<script type="text/javascript">
 			function requestId() {
@@ -167,6 +170,8 @@
 					},
 				});
 			}
+			
 		</script>
+		
 	</body>
 </html>
