--- a/src/main/resources/META-INF/resources/invite.html
+++ b/src/main/resources/META-INF/resources/invite.html
@@ -68,7 +68,7 @@
 	scheme_android= 'bravephoenix://eulixspace:4031/sharelink',  
 	scheme_ios= 'https://ao.space',
 	download_android='https://code.eulix.xyz/bp/cicada/-/packages'; 
-	download_ios='https://res.space.eulix.xyz/clients/ios/index.html'; 
+	download_ios='https://www.apple.com/app-store/'; 
 	document.getElementById('inv').onclick = function () {
 			if(detect()=="android")
 			{
