Other | 发布eulixspace-web 0.7.1版本

--- a/src/main/resources/META-INF/resources/indexpc.html
+++ b/src/main/resources/META-INF/resources/indexpc.html
@@ -28,7 +28,7 @@
 				};
 			};
 			if (!os().isPc) {
-				window.location.href = "mobile.html";
+				window.location.href = "indexsj.html";
 			}
 		</script>
 		<link href="./public/css/index.min.css" rel="stylesheet" type="text/css" />
