--- a/src/main/resources/META-INF/resources/download.html
+++ b/src/main/resources/META-INF/resources/download.html
@@ -57,13 +57,13 @@
 		<img class="center-block" src="./public/pc/android.png"/>
 	  </div>
       <div class="col-md-3" style="margin-top:137px">
-	  <div style="width: 470px;height: 65px;font-size: 37px;font-weight: 500;color: #464956;line-height: 37px;">傲来空间iPhone版APP</div>
+	  <div style="width: 470px;height: 65px;font-size: 37px;font-weight: 500;color: #464956;line-height: 37px;">傲来空间Android 版APP</div>
 	  <div style="width: 396px;height: 30px;font-size: 17px;font-weight: 500;color: #85899C;line-height: 17px;">文件安全存储，数据极速访问、便捷分享</div>
 	  <div style="width: 317px;height: 137px;background: #F0F4FB;margin-top:37px;padding:17px">
 		<div style="float:left;"><p>大小</p><p>版本</p><p>适用系统</p><p>更新时间</p></div>		
 		<div style="float:right;"><p>100M</p><p>2.0.0</p><p>Android 5.0以上版本</p><p>2021-11-10</p></div>
 	  </div> 
-		<div><a href="https://code.eulix.xyz/bp/cicada/-/packages">
+		<div><a href="https://res.space.eulix.xyz/clients/android/android-latest.apk">
 		<button style="margin-top:37px" type="button" class="btn btn-primary btn-lg">立即下载</button></a>
 		</div>	  
 		<div class="col-md-3"></div>    	  
