--- a/src/main/resources/META-INF/resources/invite.html
+++ b/src/main/resources/META-INF/resources/invite.html
@@ -56,7 +56,7 @@
 	</div>
 	<div style="display: flex;margin-top:43px;font-size: 3.7vw;font-weight: 500;color: #85899C;"class="flex x-center y-center xy-center">您的亲友<span style="color: #337AFF;">eulixos</span>邀请您加入他/她的傲来空间</div>
 	<div style="display: flex;margin-top:33px;font-size: 4.3vw;color: #333333;"class="flex x-center y-center xy-center">加入后可共享使用存储空间哦！</div>
-	<div style="display: flex;margin-top:134px;" class="flex x-center y-center xy-center">
+	<div style="display: flex;margin-top:77px;" class="flex x-center y-center xy-center">
 		<div style="display: flex;width: 33vw;height: 7vh;" class="button flex x-center y-center xy-center pointer" >
 		<div id="inv" style="font-size: 3.7vw;color: #FFFFFF;line-height: 22px;margin:11px 68px;" >立即体验</div>
 		</div>
@@ -67,7 +67,7 @@
 	var downloader, 
 	scheme_android= 'bravephoenix://eulixspace:4031/sharelink',  
 	scheme_ios= 'https://ao.space',
-	download_android='https://code.eulix.xyz/bp/cicada/-/packages'; 
+	download_android='https://res.space.eulix.xyz/clients/android/android-latest.apk'; 
 	download_ios='https://www.apple.com/app-store/'; 
 	document.getElementById('inv').onclick = function () {
 			if(detect()=="android")
