--- a/src/main/resources/META-INF/resources/privacy.html
+++ b/src/main/resources/META-INF/resources/privacy.html
@@ -5,11 +5,11 @@
 <meta name="robots" content="noindex, nofollow">
 <style type="text/css">
 body{
-padding:37px;
+padding:77px;
 margin:0px;
 }
 .content{
-font-size:17px;
+font-size:13px;
 margin-bottom:37px
 }
 .title{
@@ -29,102 +29,167 @@ margin-bottom:37px
 <body>
 
 
-<div style="font-size:33px;font-weight: bold;text-align: center;margin-bottom:37px">APP隐私政策</div> 
+<div style="font-size:33px;font-weight: bold;text-align: center;margin-bottom:37px">傲空间隐私政策</div> 
 
-<div class="content">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本应用尊重并保护所有使用服务用户的个人隐私权。为了给您提供更准确、更有个性化的服务，本应用会按照本隐私权政策的规定使用和披露您的个人信息。但本应用将以高度的勤勉、审慎义务对待这些信息。除本隐私权政策另有规定外，在未征得您事先许可的情况下，本应用不会将这些信息对外披露或向第三方提供。本应用会不时更新本隐私权政策。您在同意本应用服务使用协议之时，即视为您已经同意本隐私权政策全部内容。本隐私权政策属于本应用服务使用协议不可分割的一部分。 
+<div class="title">提示条款</div> 
+<div class="content">傲空间（“我们”）致力于为广大用户提供一个属于自己的个人数字空间，我们深知用户信息安全的重要性，尊重并保护用户的隐私和个人信息，您使用我们的产品与/或服务时，我们可能会收集和使用您的相关信息，我们将以高度勤勉和审慎的义务对待这些信息，采取相应的安全保护措施来保护您的个人信息。
+
+我们希望通过本《隐私政策》向您说明我们在您使用我们的产品与/或服务时如何收集、使用、储存这些信息，以及我们为您提供的访问、更新、删除和处理保护这些信息的方式。除本隐私权政策另有规定外，在未征得您事先许可的情况下，本应用不会将这些信息对外披露或向第三方提供。
+
+您在使用或继续使用我们的服务，即视为您已经同意本隐私权政策全部内容。本隐私权政策属于本应用服务使用协议不可分割的一部分。
+ 
 </div>
-<div class="title">
-1. 适用范围 
+<div class="title">本政策将帮助您了解以下内容：</div> 
+<div class="content">
+1.	我们如何收集和使用您的个人信息<br></br>
+2.	我们如何使用 Cookie 和同类技术<br></br> 
+3.	我们如何共享、转让、公开披露您的个人信息<br></br>
+4.	我们如何保护和保存您的个人信息<br></br> 
+5.	您如何管理个人信息<br></br>
+6.	未成年人信息的保护<br></br>
+7.	通知和修订<br></br> 
+8.	如何联系我们<br></br>
 </div> 
-<div class="content">(a)在您使用本应用网络服务，或访问本应用平台网页时，本应用自动接收并记录的您的浏览器和计算机上的信息，包括但不限于您的IP地址、浏览器的类型、使用的语言、访问日期和时间、软硬件特征信息及您需求的网页记录等数据；</div>  
-<div class="content">(b) 本应用通过合法途径从商业伙伴处取得的用户个人数据。</div> 
-您了解并同意，以下信息不适用本隐私权政策： 
+<div class="title">一、	我们如何收集和使用您的个人信息</div> 
 <div class="content">
-(a) 您在使用本应用平台提供的搜索服务时输入的关键字信息；
-</div>  
-<div class="content">
-(b) 本应用收集到的您在本应用发布的有关信息数据，包括但不限于参与活动、成交信息及评价详情； 
-</div>  
-<div class="content">
-(c) 违反法律规定或违反本应用规则行为及本应用已对您采取的措施。 
-</div>
-<div class="title">
-2. 信息使用 
+1.	个人信息是指以电子或者其他方式记录的能够单独或者与其他信息结合识别特定自然人身份或者反映特定自然人活动情况的各种信息。<br></br>
+2.	个人敏感信息是指一旦泄露、非法提供或滥用可能危害人身和财产安全，极易导致个人名誉、身心健康受到损害或歧视性待遇等的个人信息。<br></br>
+我们仅会出于本政策所述的以下目的，收集和使用用户的个人信息：<br></br>
 </div> 
+<div class="title">（一）	您须授权我们收集和使用您的个人信息</div> 
 <div class="content">
-(a)本应用不会向任何无关第三方提供、出售、出租、分享或交易您的个人信息，除非事先得到您的许可，或该第三方和本应用（含本应用关联公司）单独或共同为您提供服务，且在该服务结束后，其将被禁止访问包括其以前能够访问的所有这些资料。 
+1.	用户信息<br></br>
+您可以作为管理员绑定移动设备创建用户身份使用傲空间，或者您也可以经管理员授权作为其家庭成员绑定移动设备创建用户身份使用傲空间的基本功能。<br></br>
+所有用户在首次绑定个人移动设备登录时，会默认获取到一串由字符组成的个人域名作为您的空间标识。<br></br>
+2.	设备和日志信息<br></br>
+我们将获取您的设备属性信息（例如设备型号、设备序列号、操作系统版本、设备设置、国际移动设备身份码IMEI 、MAC地址、唯一设备标识符、广告标识符IDFA等软硬件特征信息）、设备所在位置相关信息（例如Wi-Fi 、蓝牙等传感器信息）、设备连接信息（例如网络运营商、网络连接类型/连接方式/连接状态、蓝牙、系统语言）、扫描无线局域网获得的SSID列表、用户配置过的无线网络SSID列表、您访问服务的日期、时间、时长，场景采集的个人信息：DHCP信息（可能包含：本地IP地址等），这类信息是为提供服务必须收集的基础信息，如果不同意，将影响到您对傲空间基本功能的使用。<br></br>
 </div> 
+<div class="title">（二）	为实现各项功能您可选择授权我们收集和使用的个人信息</div> 
 <div class="content">
-(b) 本应用亦不允许任何第三方以任何手段收集、编辑、出售或者无偿传播您的个人信息。任何本应用平台用户如从事上述活动，一经发现，本应用有权立即终止与该用户的服务协议。 
+为向您提供更加优质、满意、个性化的服务，我们可能会根据您的授权附加收集和使用您的以下信息：<br></br>
+1.	位置信息<br></br>
+我们会收集您的位置信息，（我们仅收集您当时所处的地理位置，但不会将您各时段的位置信息进行结合以判断您的行踪轨迹）来判断您所处的地点。<br></br>
+2.	摄像头（相机）、相册存储信息<br></br>
+我们将收集您选择授权的信息实现备份上传功能，您也可以完成视频拍摄、拍照、扫码登录以及空间动态分享等功能。<br></br>
+3.	语音信息<br></br>
+我们可能会收集您的录音内容，您可以直接使用麦克风来进行语音来实现一些功能，我们会根据此识别您的一些需求。<br></br>
+4.	通讯录信息<br></br>
+我们将收集您的通讯录信息，您也可以对本地通讯录进行查看并手动选择待备份的通讯录内容，从而实现备份上传。<br></br>
+5.	文件读写/存储信息。<br></br>
+我们为您提供文件预览、传输等功能，为方便您再次打开时实现快速预览以及实现文件传输功能等，我们会获取存储权限、读取数据文件、对数据文件进行临时缓存。这需要您授权同意获取读写手机存储权限。如果不同意，将无法预览文件，无法加载文件列表或加载缓慢，无法上传、下载文件。<br></br>
+请您注意，您开启任一权限即代表您授权我们可以收集和使用相关个人信息来为您提供对应服务，您一旦关闭任一权限即代表您取消了授权，我们将不再基于对应权限继续收集和使用相关个人信息，也无法为您提供该权限所对应的服务。但是，您关闭权限的决定不会影响此前基于您的授权所进行的信息收集及使用。如果您不提供开启上述权限，不会影响您正常使用我们的其他功能及服务。<br></br>
 </div> 
+<div class="title">（三）	为您提供安全保障</div> 
+<div class="content">为提高您使用我们提供的产品和服务的安全性，我们可能使用您的信息用于身份验证、客户服务、安全防范、诈骗监测、信贷分析等，以预防、发现、调查欺诈、危害安全、非法或违反与我们的协议、政策或规则的行为，以保护您、我们的其他用户、我们或关联公司、合作方及社会公众的合法权益。
+</div> 
+<div class="title">（四）	优化服务、开发功能</div> 
+<div class="content">为了解用户使用体验、优化服务、开发新功能等实际需求，我们可能会收集用户参与测评或意见反馈中的数据，如用户填写的测评内容、用户群体行为数据、用户意见反馈等进行评估分析。</div> 
+<div class="title">（五）	需要事先征得您授权同意的例外情形</div> 
 <div class="content">
-(c) 为服务用户的目的，本应用可能通过使用您的个人信息，向您提供您感兴趣的信息，包括但不限于向您发出产品和服务信息，或者与本应用合作伙伴共享信息以便他们向您发送有关其产品和服务的信息（后者需要您的事先同意）。 
+请注意，您充分知晓在以下情形中，收集、使用个人信息无需事先征得您的授权同意：<br></br>
+1.	与国家安全、国防安全直接相关的；<br></br>
+2.	与公共安全、公共卫生、重大公共利益直接相关的；<br></br>
+3.	与犯罪侦查、起诉、审判和判决执行等直接有关的；<br></br>
+4.	出于维护您或其他个人的生命、财产等重大合法权益但又很难得到本人同意的；<br></br>
+5.	所收集的个人信息是您自行向社会公众公开的；<br></br>
+6.	从合法公开披露的信息中收集个人信息的，如合法的新闻报道、政府信息公开等渠道；<br></br>
+7.	根据您的要求签订和履行合同所必需的；<br></br>
+8.	用于维护所提供的产品或服务的安全稳定运行所必需的，例如发现、处置产品或服务的故障；<br></br>
+9.	为开展合法的新闻报道所必需的；<br></br>
+10.	出于公共利益开展统计或学术研究所必要，且其对外提供学术研究或描述的结果时，对结果中所包含的个人信息进行去标识化处理的；<br></br>
+11.	法律法规规定的其他情形。<br></br>
+<div class="title">二、	我们如何使用 Cookie 和同类技术</div> 
+<div class="title">（一）	Cookies的使用</div> 
+<div class="content">我们会在您未拒绝接受cookies的情况下，向您的计算机或移动设备上发送一个或多个名为Cookies的小数据文件，Cookies通常包含标识符、站点名称以及一些号码和字符。向您发送的Cookies是为保证您获得更轻松的访问体验，实现更周到的个性化服务需求，帮助优化整理您的需求信息、判断您的登录状态及数据安全。<br></br>
+我们不会将Cookies用于本隐私政策所述目的之外的任何用途。您有权选择接受或拒绝接受cookies，您可以通过修改浏览器设置的方式拒绝接受cookies。但如果您选择拒绝接受cookies，则需要在每一次访问我们的网站时亲自更改用户设置，但您可能因为该等修改，无法登录或使用依赖于cookies的本应用网络服务或功能。<br></br>
+<div class="title">（二）	网络Beacon和同类技术的使用</div> 
+<div class="content">除 Cookie 外，我们还会在网站上使用网络Beacon等其他同类技术。我们的网页上常会包含一些电子图像（称为"单像素" GIF 文件或 "网络 beacon"）。我们使用网络beacon的方式有:<br></br>
+1.	通过在网站上使用网络beacon，计算用户访问数量，并通过访问 cookie 辨认注册的用户。<br></br>
+2.	通过得到的cookies信息，为您提供个性化服务。<br></br>
 </div> 
-<div class="title">
-3. 信息披露 
+<div class="title">三、	我们如何共享、转让、公开披露您的个人信息</div> 
+<div class="title">（一）	共享</div> 
+<div class="content">除非经过您本人事先授权同意，我们不会向任何第三方共享、转让您的个人信息。<br></br>
+我们的产品集成友盟+SDK，经过您的授权同意，我们可能会共享的个人信息：友盟+SDK需要收集您的设备Mac地址、唯一设备识别码（IMEI/android ID/IDFA/OPENUDID/IP地址/GUID、SIM 卡 IMSI 信息）以提供统计分析服务，并通过地理位置校准报表数据准确性，提供基础反作弊能力。<br></br>
+<div class="title">（二）	转让</div> 
+<div class="content">我们不会将您的个人信息转让给任何第三方，但以下情况除外：<br></br>
+1.	事先获得您明确的同意或授权；<br></br>
+2.	根据适用的法律法规、法律程序的要求、强制性的行政或司法要求所必须的情况进行提供；<br></br>
+3.	符合与您签署的相关协议（包括在线签署的电子协议以及相应的平台规则）或其他的法律文件约定所提供；<br></br>
 </div> 
+<div class="title">（三）	公开披露</div> 
+我们仅会在以下情况下，公开披露您的个人信息：
+1. 获得您的明确同意；
+2. 基于法律法规、法律程序、诉讼或政府主管部门强制性要求下。
+
+<div class="title">（四）	共享、转让、公开披露个人信息时事先征得授权同意的例外</div> 
+<div class="content">在以下情形中，共享、转让、公开披露个人信息无需事先征得个人信息主体的授权同意：<br></br>
+1. 与国家安全、国防安全直接相关的<br></br>
+2. 与公共安全、公共卫生、重大公共利益直接相关的；<br></br>
+3. 与犯罪侦查、起诉、审判和判决执行等直接相关的；<br></br>
+4. 出于维护个人信息主体或其他个人的生命、财产等重大合法权益但又很难得到本人同意的；<br></br>
+5. 个人信息主体自行向社会公众公开的个人信息；<br></br>
+6. 从合法公开披露的信息中收集个人信息的，如合法的新闻报道、政府信息公开等渠道。<br></br>
+</div> 
+<div class="title">四、	我们如何保护和保存您的个人信息</div> 
+<div class="title">（一）	安全措施</div> 
 <div class="content">
-在如下情况下，本应用将依据您的个人意愿或法律的规定全部或部分的披露您的个人信息： 
+1.	我们已使用符合业界标准的安全防护措施保护您提供的个人信息， 防止数据遭到未经授权访问、公开披露、使用、修改、损坏或丢失。我们会采取一切合理可行的措施，保护您站点下用户的个人信息。<br></br>
+2.我们提醒您注意，互联网并非绝对安全的环境，当您通过社交软件与其他用户交互信息时，不确定第三方软件对信息的传递是否完全加密，请注意确保您个人信息的安全，我们建议您不要通过此类方式发送个人信息，以免个人信息泄露。请使用复杂密码，协助我们保证您的个人信息安全。<br></br>
+3.我们也请您理解，在互联网行业由于技术的限制和飞速发展以及可能存在的各种恶意攻击手段，即便我们竭尽所能加强安全措施，也不可能始终保证信息的百分之百安全。若不幸发生个人信息安全事件，我们将按照法律法规的要求，及时向您告知：安全事件的基本情况和可能的影响、我们已采取或将要采取的处置措施、您可自主防范和降低风险的建议、对您的补救措施。我们将及时将事件相关情况以邮件、信函、电话、推送通知的方式告知您，难以逐一告知个人信息主体时，我们会采取合理、有效的方式发布公告。<br></br>
+4.	若出现兼并、重组、破产等情形，我们会要求数据承接方承接数据安全责任和义务。没有数据承接方的，我们将对数据作销毁处理。法律、行政法规另有规定的，从其规定。<br></br>
+5.	对于所收集的信息，我们将在法律规定的最短期限内保存，超出保存期限后，我们将对所收集的信息进行匿名化处理。<br></br>
 </div> 
+<div class="title">（二）	保存期限</div> 
 <div class="content">
-(a) 经您事先同意，向第三方披露； 
+1.	您在我们产品及服务期间，我们将持续为您保存您的个人信息。<br></br>
+2.	如果您注销用户或主动删除上述信息，我们将依据网络安全法等法律法规规定的期限内保存您的信息。在您注销帐户或主动删除上述信息后，我们不会再对您的个人信息进行商业化使用。<br></br>
 </div> 
+<div class="title">（三）	保护领域</div> 
+<div class="content">您的个人信息均储存于中华人民共和国境内。如我们需要向境外传输您的个人信息，我们会严格按照法律法规的规定执行，并保证您的个人信息安全。</div> 
+<div class="title">五、	您如何管理个人信息</div> 
+<div class="title">（一）	访问、变更您的个人信息</div> 
 <div class="content">
-(b)为提供您所要求的产品和服务，而必须和第三方分享您的个人信息； 
+1.	访问、变更个人信息<br></br> 
+您可以通过进入傲空间移动端【我的-个人信息】查询、变更使用服务时而设置的个人信息（如：个性签名、头像等）。<br></br>
+2.	产品绑定信息<br></br>
+您可以通过进入傲空间移动端【我的-设备管理】，查询、管理产品设备的信息。<br></br>
+3.	删除您的个人信息<br></br>
+在以下情形中，您可以向我们提出删除个人信息的请求，您可以通过傲空间移动端：【我的-帮助与反馈-意见反馈】；Web：【意见反馈】随时与我们联系。<br></br>
+（1）如果我们处理个人信息的行为违反法律法规；<br></br>
+（2）如果我们收集、使用您的个人信息，却未征得您的明确同意；<br></br>
+（3）如果我们处理个人信息的行为严重违反了与您的约定。<br></br>
+4.	注销用户<br></br>
+您可以通过傲空间移动端【我的-家庭成员-成员信息-删除成员】，选择需要删除的用户信息，请注意，确认删除后，您将会注销该用户并清除其个人空间内的所有数据信息。<br></br>
+对于您合理的请求，我们原则上不收取费用，但对多次重复、超出合理限度的请求，我们将视情况收取一定成本费用。对于那些无端重复、需要过多技术手段、给他人合法权益带来风险或者非常不切实际的请求，我们可能会予以拒绝。<br></br>
+5.	在以下情形中，按照法律法规要求，我们将无法响应您的更正、删除、注销信息的请求：<br></br>
+（1） 与国家安全、国防安全直接相关的；<br></br>
+（2）与公共安全、公共卫生、重大公共利益直接相关的；<br></br>
+（3）与犯罪侦查、起诉、审判和执行判决等直接相关的；<br></br>
+（4）我们有充分证据表明您存在主观恶意或滥用权利的（如您的请求将危害公共安全和其他人合法权益，或您的请求超出了一般技术手段和商业成本可覆盖的范围）；<br></br>
+（5）响应个人信息主体的请求将导致您或其他个人、组织的合法权益受到严重损害的；<br></br>
+（6）涉及商业秘密的。<br></br>
+<div class="title">六、	未成年人信息的保护</div> 
+<div class="content">
+我们主要面向成人提供产品和服务。如您为未成年人，我们要求您请您的父母或监护人仔细阅读本隐私政策，并在征得您的父母或监护人同意的前提下使用我们的服务或向我们提供信息。<br></br>
+对于经父母或监护人同意使用我们的产品或服务而收集未成年人个人信息的情况，我们只会在法律法规允许、父母或监护人明确同意或者保护未成年人所必要的情况下使用、共享、转让或披露此信息。<br></br>
+如果任何时候监护人有理由相信我们在未获监护人同意的情况下收集了未成年人的个人信息，请通过傲空间移动端：【我的-帮助与反馈-产品建议】、Web：【意见反馈】联系我们，我们会采取措施尽快删除相关数据。<br></br>
 </div> 
-<div class="content">
-(c) 根据法律的有关规定，或者行政或司法机构的要求，向第三方或者行政、司法机构披露； 
-</div> 
-<div class="content">
-(d) 如您出现违反中国有关法律、法规或者本应用服务协议或相关规则的情况，需要向第三方披露； 
-</div> 
-<div class="content">
-(e) 如您是适格的知识产权投诉人并已提起投诉，应被投诉人要求，向被投诉人披露，以便双方处理可能的权利纠纷； 
-</div>
+<div class="title">七、	通知和修订</div>
 <div class="content"> 
-(f) 在本应用平台上创建的某一交易中，如交易任何一方履行或部分履行了交易义务并提出信息披露请求的，本应用有权决定向该用户提供其交易对方的联络方式等必要信息，以促成交易的完成或纠纷的解决。 
+我们的隐私政策可能变更。未经您明确同意，我们不会削减您按照本隐私政策所应享有的权利。我们会在本页面上发布对本隐私政策所做的任何变更，建议您在联网的状态下查询最新版本的隐私政策。<br></br>
+对于重大变更，我们会在产品或服务的主要曝光页面或站内信或向您发送电子邮件或其他合适的能触达您的方式通知您。若您不同意该等变更可以停止使用我们产品和服务，若您继续使用我们的产品和/或服务，即表示您同意受修订后的本隐私政策的约束。<br></br>
+本政策所指的重大变更包括但不限于：<br></br>
+1. 我们的服务模式发生重大变化。如处理个人信息的目的、处理的个人信息类型、个人信息的使用方式等；<br></br>
+2. 我们在所有权结构、组织架构等方面发生重大变化。如业务调整、破产并购等引起的所有者变更等；<br></br>
+3. 个人信息共享、转让或公开披露的主要对象发生变化；<br></br>
+4. 您参与个人信息处理方面的权利及其行使方式发生重大变化；<br></br>
+5. 我们负责处理个人信息安全的责任部门、联络方式及投诉渠道发生变化时；<br></br>
+6. 个人信息安全影响评估报告表明存在高风险时。<br></br>
 </div> 
-<div class="content">
-(g) 其它本应用根据法律、法规或者网站政策认为合适的披露。 
+<div class="title">八、	如何联系我们</div> 
+<div class="content"> 
+您对本声明和政策内容有任何疑问和意见，或者您对本隐私政策的实践以及操作上有任何疑问和意见，可以通过傲空间移动端：【我的-帮助与反馈】或Web：【意见与反馈】，或通过邮箱与我们联系。<br></br>
+为保障及时处理和反馈，您需要提供书面请求及有效联系方式。我们有可能会需要验证您的身份。一般情况下，我们会在验证您身份后的十五天内或法律法规规定的期限内做出答复及合理解释。<br></br>
 </div> 
-<div class="title">
-4. 信息存储和交换 
-</div>
-<div class="content">
-本应用收集的有关您的信息和资料将保存在本应用及（或）其关联公司的服务器上，这些信息和资料可能传送至您所在国家、地区或本应用收集信息和资料所在地的境外并在境外被访问、存储和展示。
-</div> 
-<div class="title">
-5. Cookie的使用 
-</div>
-<div class="content">
-(a) 在您未拒绝接受cookies的情况下，本应用会在您的计算机上设定或取用cookies ，以便您能登录或使用依赖于cookies的本应用平台服务或功能。本应用使用cookies可为您提供更加周到的个性化服务，包括推广服务。 
-</div>
-<div class="content">
-(b) 您有权选择接受或拒绝接受cookies。您可以通过修改浏览器设置的方式拒绝接受cookies。但如果您选择拒绝接受cookies，则您可能无法登录或使用依赖于cookies的本应用网络服务或功能。
-</div> 
-<div class="content">
-(c) 通过本应用所设cookies所取得的有关信息，将适用本政策。 
-</div>
-<div class="title">
-6. 信息安全 
-</div>
-<div class="content">
-(a)本应用将通过对数据进行加密等安全措施确保您的信息不丢失，不被滥用和变造。尽管有前述安全措施，但同时也请您注意在信息网络上不存在“完善的安全措施”。 
-</div>
-<div class="content">
-(b) 在使用本应用网络服务进行网上交易时，您不可避免的要向交易对方或潜在的交易对 
-</div>
-<div class="title">
-7.本隐私政策的更改 
-</div>
-<div class="content">
-(a)如果决定更改隐私政策，我们会在本政策中、本公司网站中以及我们认为适当的位置发布这些更改，以便您了解我们如何收集、使用您的个人信息，哪些人可以访问这些信息，以及在什么情况下我们会透露这些信息。 
-</div>
-<div class="content">
-(b)本公司保留随时修改本政策的权利，因此请经常查看。如对本政策作出重大更改，本公司会通过网站通知的形式告知。 
-</div>
-<div class="content">
-为防止向第三方披露自己的个人信息，如联络方式或者邮政地址。请您妥善保护自己的个人信息，仅在必要的情形下向他人提供。如您发现自己的个人信息泄密，尤其是本应用用户名及密码发生泄露，请您立即联络本应用客服，以便本应用采取相应措施。
-</div>
-
 </body>
